--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "antd": "^4.2.5",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^7.14.5",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-notifications": "^1.6.0",
     "react-redux": "^7.2.0",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
